# Dawdrey

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  release.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  StyleSheet.h
Source/DSP/: BiquadFilters.h  DSPUtils.h  EchoDelay.h  FeedbackSynthEngine.cpp  FeedbackSynthEngine.h  KarplusString.h  PitchShifter.h  SimpleLFO.h
Source/DSP/daisysp/: CrossFade.h  DcBlock.h  Overdrive.cpp  Overdrive.h  ReverbSc.cpp  Tone.h
